--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,5 +67,10 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <%= javascript_include_tag "application" %>
 
+    <script type="text/javascript">
+      TweetLinks.currentUser = new TweetLinks.Models.User(
+        <%= current_user.to_builder.target!.html_safe %>
+      )
+    </script>
   </body>
 </html>
