--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,10 +67,12 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <%= javascript_include_tag "application" %>
 
-    <script type="text/javascript">
-      TweetLinks.currentUser = new TweetLinks.Models.User(
-        <%= current_user.to_builder.target!.html_safe %>
-      )
-    </script>
+    <% if current_user %>
+      <script type="text/javascript">
+        TweetLinks.currentUser = new TweetLinks.Models.User(
+          <%= current_user.to_builder.target!.html_safe %>
+        )
+      </script>
+    <% end %>
   </body>
 </html>
