--- a/app/assets/javascripts/backbone/templates/tweet.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/tweet.jst.ejs
@@ -1,3 +1,8 @@
 <div class="item">
   <img src="https://cloudinary-a.akamaihd.net/tweetlinks/image/upload/w_300,r_10/<%= tweet.get('cloudinary_id') %>.png"/>
+  <div class="overlay">
+    <p>
+      YESSSSSS
+    </p>
+  <div>
 </div>
