--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
   </head>
   <body>
 
-    <div class="navbar navbar-fluid-top">
+    <div class="navbar navbar-fluid-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container-fluid">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
@@ -70,7 +70,7 @@
     <% if current_user %>
       <script type="text/javascript">
         TweetLinks.currentUser = new TweetLinks.Models.User(
-          <%= current_user.to_builder.target!.html_safe %>
+          <%= MultiJson.encode(current_user.with_data_view(:full)).html_safe %>
         )
       </script>
     <% end %>
