Show the tweer in a modal and add docs

--- a/app/assets/javascripts/backbone/templates/tweet.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/tweet.jst.ejs
@@ -11,5 +11,6 @@
         <%= tweet.escape('tweet_content') %>
       </p>
     </div>
-  <div>
+  </div>
+  <div class="overoverlay"></div>
 </div>
