spiff up the intro screen

--- a/app/assets/javascripts/backbone/templates/home.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/home.jst.ejs
@@ -1,10 +1,13 @@
-<div class="hero-unit">
-  <h1><%= I18n.t('site_title') %></h1>
-  <p><%= I18n.t('tagline') %></p>
-  <p>
-    <a class="btn btn-primary btn-large" href="auth/twitter">
-      <i class="icon-twitter"/>
-      <%= I18n.t('sign_up_with_twitter') %>
-    </a>
-  </p>
+<div id="home-wrapper">
+  <div class="hero-unit span12">
+    <h1><%= I18n.t('site_title') %></h1>
+    <p><%= I18n.t('tagline') %></p>
+    <p>
+      <a class="btn btn-primary btn-large" href="auth/twitter">
+        <i class="icon-twitter"/>
+        <%= I18n.t('sign_up_with_twitter') %>
+      </a>
+    </p>
+  </div>
+  <img src="/assets/sample.png"/>
 </div>
