--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,21 +33,8 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 10;
+  /* z-index: 10; */
   background-color: rgba(0, 0, 0, 0.75);
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-}
-
-.overoverlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 12;
-  background-color: rgba(0, 0, 0, 0.01);
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
